<resources>
    <string name="app_name">GeneralFoodApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sweets">Sweets Ordering App</string>
    <string name="order">Order your favorite desert \n Here!!!</string>
    <string name="get_started">Get Started</string>
    <string name="all">All</string>
    <string name="tab">Sweets</string>
    <string name="cakes">Cakes</string>
    <string name="candey">Candey</string>
    <string name="add_to_basket">Add To Basket</string>
    <string name="_12">12</string>
    <string name="dollar">$</string>
    <string name="grilled_beef">Grilled Beef</string>
    <string name="spicy">Spicy grilled beef \n with special seasoning</string>
    <string name="delete">Delete</string>
    <string name="donuts">Donuts</string>
    <string name="about_this_product">About This Product</string>
    <string name="kmkcdckmc">kmkcdckmc</string>
</resources>