<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/keyboard_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="72dp"
        android:layout_height="43dp"
        android:backgroundTint="@color/cardViewColor"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:shapeAppearanceOverlay="@style/DetailsCardVIew">

        <TextView
            android:id="@+id/foodPriceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="5$"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>


    <ImageView
        android:id="@+id/foodImg"
        android:layout_width="match_parent"
        android:layout_height="245dp"
        android:layout_marginTop="30dp"
        android:elevation="39dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backIv" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="13dp"
        android:layout_marginTop="31dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodImg">

        <TextView
            android:id="@+id/foodNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donuts"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_this_product"
            android:layout_margin="12dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/foodDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kmkcdckmc"
            android:layout_margin="14dp"
            android:textSize="18sp" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/vector_13"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="25dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="29dp"
        android:layout_marginBottom="23dp"
        android:backgroundTint="@color/button"
        android:text="@string/add_to_basket"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>